turnip: gfxbench car chase crash on zink
In autotune
Thread 4 "testfw_ap:zfq0" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7feffff0c0 (LWP 41650)]
0x0000007ff4ef6bdc in list_add (item=0x7fe80b62b0, list=0x7fe80b5160) at ../src/util/list.h:69
69 list->next->prev = item;
(gdb) bt
#0 0x0000007ff4ef6bdc in list_add (item=0x7fe80b62b0, list=0x7fe80b5160) at ../src/util/list.h:69
#1 0x0000007ff4ef967c in history_add_result (dev=0x5555edd690, history=0x7fe80b5150, result=0x7fe80b6280) at ../src/freedreno/vulkan/tu_autotune.c:206
#2 0x0000007ff4ef9870 in process_results (at=0x5555edf308) at ../src/freedreno/vulkan/tu_autotune.c:248
#3 0x0000007ff4ef9a20 in tu_autotune_on_submit (dev=0x5555edd690, at=0x5555edf308, cmd_buffers=0x7fe8066a90, cmd_buffer_count=2) at ../src/freedreno/vulkan/tu_autotune.c:291
#4 0x0000007ff4f7a7ec in tu_queue_submit_locked (queue=0x5555d0ab10, submit=0x7fefffd940) at ../src/freedreno/vulkan/tu_drm.c:986
#5 0x0000007ff4f7b104 in tu_queue_submit (vk_queue=0x5555d0ab10, submit=0x7fe8066a10) at ../src/freedreno/vulkan/tu_drm.c:1175
#6 0x0000007ff4fad614 in vk_queue_submit_final (queue=0x5555d0ab10, submit=0x7fe8066a10) at ../src/vulkan/runtime/vk_queue.c:377
#7 0x0000007ff4fad8cc in vk_queue_flush (queue=0x5555d0ab10, submit_count_out=0x7fefffda50) at ../src/vulkan/runtime/vk_queue.c:431
#8 0x0000007ff4f98a64 in vk_device_flush (device=0x5555edd690) at ../src/vulkan/runtime/vk_device.c:253
#9 0x0000007ff4faed4c in vk_queue_submit (queue=0x5555d0ab10, info=0x7fefffdbf8) at ../src/vulkan/runtime/vk_queue.c:883
#10 0x0000007ff4faf4bc in vk_common_QueueSubmit2KHR (_queue=0x5555d0ab10, submitCount=1, pSubmits=0x7fefffe308, _fence=0x0) at ../src/vulkan/runtime/vk_queue.c:1156
#11 0x0000007ff4fbde68 in vk_common_QueueSubmit (_queue=0x5555d0ab10, submitCount=1, pSubmits=0x7fefffe660, fence=0x0) at ../src/vulkan/runtime/vk_synchronization2.c:416
#12 0x0000007ff64d0fb4 in submit_queue (data=0x7fa1bbad10, gdata=0x5555d122c0, thread_index=0) at ../src/gallium/drivers/zink/zink_batch.c:440
#13 0x0000007ff584f8b8 in util_queue_thread_func (input=0x5555d11490) at ../src/util/u_queue.c:306
#14 0x0000007ff58c3cb0 in impl_thrd_routine (p=0x5555df1fd0) at ../src/c11/impl/threads_posix.c:67
#15 0x0000007ff7820aec in ?? () from /usr/lib/libc.so.6
#16 0x0000007ff788a5dc in ?? () from /usr/lib/libc.so.6